--- a/more.html
+++ b/more.html
@@ -3,7 +3,7 @@
   <head>
     <title>MINDFULNESS - introduce</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style more.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
